added win/loss GIFs

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 					<div id="4" class="answer">
 					</div>
 				</div>
+				<div class="fail">
+					<img src="https://media.giphy.com/media/uOIKBePrZhexy/giphy.gif">
+				</div>
+				<div class="success">
+					<img src="https://media.giphy.com/media/Y6xXKr1P0thGo/giphy.gif">
+				</div>
 			</div>
 
 		</div>
